--- a/css/resume.css
+++ b/css/resume.css
@@ -90,7 +90,7 @@ p.lead {
 }
 
 #sideNav .navbar-toggler:focus {
-  outline-color: #11f;
+  outline-color: #d48a6e;
 }
 
 @media (min-width: 992px) {
@@ -171,5 +171,6 @@ a {
   color: #01a;
 }
 
-a:11fa:focus, a:active {
-  color: #11f}
+a:hover, a:focus, a:active {
+  color: #11f;
+}
