--- a/css/resume.css
+++ b/css/resume.css
@@ -72,7 +72,7 @@ p.lead {
 }
 
 .social-icons a:hover {
-  background-color: #015;
+  background-color: rgb(0, 6, 29);
 }
 
 .dev-icons {
@@ -80,7 +80,7 @@ p.lead {
 }
 
 .dev-icons .list-inline-item i:hover {
-  color: #015;
+  color: rgb(0, 6, 29);
 }
 
 #sideNav .navbar-nav .nav-item .nav-link {
@@ -160,15 +160,15 @@ section.resume-section .resume-item .resume-date {
 }
 
 .bg-primary {
-  background-color: #015 !important;
+  background-color: rgb(0, 6, 29) !important;
 }
 
 .text-primary {
-  color: #015 !important;
+  color: rgb(0, 6, 29) !important;
 }
 
 a {
-  color: #015;
+  color: rgb(0, 6, 29);
 }
 
 a:hover, a:focus, a:active {
