--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -18,8 +18,8 @@ $blue:    #007bff !default;
 $indigo:  #6610f2 !default;
 $purple:  #6f42c1 !default;
 $pink:    #e83e8c !default;
-$red:     #dc3545 !default;
-$orange:  #BD5D38 !default;
+$red:     #2e20f3 !default;
+$orange:  #000060 !default;
 $yellow:  #ffc107 !default;
 $green:   #28a745 !default;
 $teal:    #20c997 !default;
