--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -19,7 +19,7 @@ $indigo:  #6610f2 !default;
 $purple:  #6f42c1 !default;
 $pink:    #e83e8c !default;
 $red:     #2e20f3 !default;
-$orange:  #010129 !default;
+$orange:  #00005c !default;
 $yellow:  #ffc107 !default;
 $green:   #28a745 !default;
 $teal:    #20c997 !default;
