--- a/css/resume.css
+++ b/css/resume.css
@@ -72,7 +72,7 @@ p.lead {
 }
 
 .social-icons a:hover {
-  background-color: #00005c;
+  background-color: #010146;
 }
 
 .dev-icons {
@@ -80,7 +80,7 @@ p.lead {
 }
 
 .dev-icons .list-inline-item i:hover {
-  color: #00005c;
+  color: #010146;
 }
 
 #sideNav .navbar-nav .nav-item .nav-link {
@@ -90,7 +90,7 @@ p.lead {
 }
 
 #sideNav .navbar-toggler:focus {
-  outline-color: #0000a9;
+  outline-color: #020291;
 }
 
 @media (min-width: 992px) {
@@ -160,17 +160,17 @@ section.resume-section .resume-item .resume-date {
 }
 
 .bg-primary {
-  background-color: #00005c !important;
+  background-color: #010146 !important;
 }
 
 .text-primary {
-  color: #00005c !important;
+  color: #010146 !important;
 }
 
 a {
-  color: #00005c;
+  color: #010146;
 }
 
 a:hover, a:focus, a:active {
-  color: #000010;
+  color: black;
 }
